# malaria-ct-recon

./: .gitignore  .preregistration_commit  .preregistration_commit.ots  .preregistration_commit.txt  .preregistration_commit.txt.ots  .v013_commit.txt  .v013_commit.txt.ots  .v014_commit.txt  .v014_commit.txt.ots  .v015_commit.txt  .v015_commit.txt.ots  .v016_commit.txt  .v016_commit.txt.ots  README.md  aact_path.toml.example  corpus_overrides.csv  pyproject.toml  requirements.txt
dashboard/: dashboard.js  index.html
docs/: figure-d-yearbins.md  methods-paper-limitations.md  preregistration-history.md
paper/: __init__.py  build_docx.py  make_figure_d.py  methods-note-draft.docx  methods-note-draft.md  refs.bib  refs_verification.csv  verify_refs.py  wc.py
pilots/: p01_p03_year_trajectories.py  p01_reporting_compliance.py  p02_endpoint_chaos.py  p03_decision_rule.py  p03_expanded_regex_check.py  p03_pcr_corrected.py  p03_sensitivity_uncomplicated_falciparum.py  p04_resistance_era.py  p05_pediatric_dose.py  p06_cross_registry.py  p07_sponsor_pdp.py  p08_retro_registration.py  p09_geographic.py  p10_chmi_field.py  preflight.py  run_all.py
tests/: conftest.py  test_aact.py  test_build_docx.py  test_config.py  test_corpus.py  test_decision_rule.py  test_make_figure_d.py  test_methods_note_draft.py  test_p01_reporting_compliance.py  test_p02_endpoint_chaos.py  test_p03_expanded_regex.py  test_p03_pcr_corrected.py  test_p03_sensitivity.py  test_p04_resistance_era.py  test_p05_pediatric_dose.py  test_p06_cross_registry.py  test_p07_sponsor_pdp.py  test_p09_geographic.py  (+9 more)
(+15 files in other folders)
