[project]
name = "malaria-ct-recon"
version = "0.1.5"
description = "10-pilot reconnaissance of bias sources in malaria CT.gov data"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Mahmood", email = "mahmood726@gmail.com"}]
dependencies = [
    "duckdb>=1.0",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "python-docx>=1.1",
    "requests>=2.31",
    "scipy>=1.13",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
